<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="iphone14ProMaxThreeVM" type="com.agender.app.modules.iphone14promaxthree.data.viewmodel.Iphone14ProMaxThreeVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnagender"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_37pxv"
        android:layout_marginEnd="@dimen/_40pxh"
        android:layout_marginStart="@dimen/_40pxh"
        android:layout_marginTop="@dimen/_88pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearIPhone14ProM"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtAgender"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_60pxh"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{iphone14ProMaxThreeVM.iphone14ProMaxThreeModel.txtAgender}"
                    style="@style/txtPoppinsbold40_1" tools:text="@string/lbl_agender"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCreateyouracc"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_76pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{iphone14ProMaxThreeVM.iphone14ProMaxThreeModel.txtCreateyouracc}"
                    style="@style/txtPoppinssemibold20" tools:text="@string/msg_create_your_acc"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_radius_5"
                    android:ellipsize="end"
                    android:hint="@string/lbl_email"
                    android:id="@+id/etGroupOne"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@={iphone14ProMaxThreeVM.iphone14ProMaxThreeModel.etGroupOneValue}"
                    android:textColorHint="@color/gray_500"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_radius_5"
                    android:ellipsize="end"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etGroupTwo"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@={iphone14ProMaxThreeVM.iphone14ProMaxThreeModel.etGroupTwoValue}"
                    android:textColorHint="@color/gray_500"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_radius_5"
                    android:ellipsize="end"
                    android:hint="@string/msg_confirm_passwor"
                    android:id="@+id/etGroupTen"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@={iphone14ProMaxThreeVM.iphone14ProMaxThreeModel.etGroupTenValue}"
                    android:textColorHint="@color/gray_500"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSignUp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_sign_up"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOrsigninwit"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_60pxh"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_marginTop="@dimen/_75pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{iphone14ProMaxThreeVM.iphone14ProMaxThreeModel.txtOrsigninwit}"
                    style="@style/txtPoppinssemibold12" tools:text="@string/msg_or_sign_in_wit"/>
                <ImageView android:gravity="center_horizontal"
                    android:id="@+id/imageGroupSeven"
                    android:layout_height="@dimen/_57pxh"
                    android:layout_marginEnd="@dimen/_5pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_group7"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_group7"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtConfirmation"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_60pxh"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_marginTop="@dimen/_91pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{iphone14ProMaxThreeVM.iphone14ProMaxThreeModel.txtConfirmation}"
                    style="@style/txtPoppinssemibold12" tools:text="@string/msg_don_t_have_an_a"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
